[tool.poetry]
name = "ml-what"
version = "0.1.0"
description = ""
authors = ["Marc Edwards <marc@mlwhat.com>"]
readme = "README.md"
packages = [{include = "ml_what", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
