[tool.poetry]
name = "ml-what"
version = "0.1.0"
description = ""
authors = ["Marc Edwards <marc@mlwhat.com>"]
readme = "README.md"
packages = [{include = "ml_what", from = "src"}]

[tool.poetry.dependencies]
python = "^3.14"
pandas = "^2.2.2"
numpy = "^1.26.4"
strictly-typed-pandas = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-order = "^1.2.1"
numpydoc = "^1.7.0"
ruff = "^0.3.4"
pylama = "^8.4.1"
basedpyright = "^1.12.6"
setuptools = "^70.0.0"
pandas-stubs = "^2.2.1.240316"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylama]

ignore = "E261,E0602,C901,W0611,F401"

skip = """\
*.ipynb_checkpoints/*,\
tasks.py,\
exp.py,\
"""

max_line_length = 160

format = "pylint"

[tool.pytest.ini_options]
addopts = """\
--doctest-modules \
--doctest-ignore-import-errors \
--ignore=tasks.py \
--ignore=exp.py \
"""

filterwarnings = [
    "error",
    "ignore:",
    "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning",
]

[tool.pyright]

typeCheckingMode  = "strict"

reportUnusedImport = false

exclude = [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
    "**/simple/",
    "./src/ml_what/util/debug.py",
    "./tasks.py",
    "tests/test_docs.py",
    "**/exp.py",
]

ignore =  [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
    "**/simple/",
    "src/ml_what/util/debug.py",
    "./tasks.py",
    "**/exp.py",
]

# todo: remove
reportUnusedVariable = false

[tool.ruff]

line-length = 160

indent-width = 4

target-version = "py312"

exclude = [
    "**/.ipynb_checkpoints/*",
    "**/.venv/",
    "tests",
    "tasks.py",
    "exp.py",
]

[tool.ruff.lint]

preview = true
select = ["ALL"]
ignore = [
    # # maybe enable
    "I001",
    # "TCH001",
    # "TCH002",
    # "TCH003",
    # "TD003",
    # "SLF001",

    # pep649 not yet supported
    "F821",

    # definitely kill
    "S101",
    "PD008",
    "FBT001",
    "CPY001",
    "D203",
    "D212",
    "E261",
    "EM101",
    "D200",
    "TD002",
    "TRY003",
    "FIX001",
    "FIX002",
    "FIX003",
    "FIX004",
    "ANN101",
    "ANN102",
    "ANN401",
    "RET505",
    "PD901",
    "SIM108",

    # # remove later
    "PLR6301",
    "F841",
    "ARG002",
    "F401",
    "RUF100",
    "ERA001",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    # "D105",
    "D107",
    # "PGH003",
    # "S101",
    # "C901",
    # "PLR0915",
    # "RET504",
    # undecided
    "D205",
    # "D400",
    # "D415",
    # "D212",
    # "FIX002",
    # "RSE102",
    # "TCH003",
    # "TCH003",
    # "TCH003",
    # "TCH003",
    # "TCH003",
]

[tool.ruff.lint.per-file-ignores]

"**/__init__.py" = ["D205"]

[tool.ruff.lint.flake8-quotes]
# Don't bother trying to avoid escapes.
avoid-escape = false

[tool.ruff.lint.isort]

force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.format]

quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"

[tool.pydoclint]
style = 'sphinx'
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = true
skip-checking-short-docstrings = false
allow-init-docstring = true
skip-checking-raises = true